User Settings Modal: Fix accept TOS misalignment and incorrect layout

--- a/static/css/timetable/partials/user_settings_modal.scss
+++ b/static/css/timetable/partials/user_settings_modal.scss
@@ -132,6 +132,10 @@
     display: flex;
     padding: 0 0 15px;
     column-gap: 20px;
+
+    .preference-wrapper {
+      flex: 1;
+    }
   }
 
   .preference-attn {
